konst/tests/misc_tests/destructure_rec_ui_tests/disallowed_array_tuple_pat_syntax-err.stderr
error: tuple patterns do not support `..` with trailing fields
 --> tests/misc_tests/destructure_rec_ui_tests/disallowed_array_tuple_pat_syntax-err.rs:3:17
  |
3 | const _: () = { konst::destructure_rec!{ (a, .., b) = (1, 2, 3, 4) }; };
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__destructure_rec__recursive` which comes from the expansion of the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected comma
 --> tests/misc_tests/destructure_rec_ui_tests/disallowed_array_tuple_pat_syntax-err.rs:5:48
  |
5 | const _: () = { konst::destructure_rec!{ (a () b) = (1, 2, 3) }; };
  |                                                ^
  |
  = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected struct pattern
 --> tests/misc_tests/destructure_rec_ui_tests/disallowed_array_tuple_pat_syntax-err.rs:7:45
  |
7 | const _: () = { konst::destructure_rec!{ (a [] b) = (1, 2, 3) }; };
  |                                             ^^
  |
  = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected pattern, found `,`
 --> tests/misc_tests/destructure_rec_ui_tests/disallowed_array_tuple_pat_syntax-err.rs:9:46
  |
9 | const _: () = { konst::destructure_rec!{ (a ,, b) = (1, 2, 3) }; };
  |                                              ^
  |
  = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected comma
  --> tests/misc_tests/destructure_rec_ui_tests/disallowed_array_tuple_pat_syntax-err.rs:11:50
   |
11 | const _: () = { konst::destructure_rec!{ (a @ () @ _) = (1, 2, 3) }; };
   |                                                  ^
   |
   = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected comma
  --> tests/misc_tests/destructure_rec_ui_tests/disallowed_array_tuple_pat_syntax-err.rs:13:50
   |
13 | const _: () = { konst::destructure_rec!{ (a @ [] @ _) = (1, 2, 3) }; };
   |                                                  ^
   |
   = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected struct pattern
  --> tests/misc_tests/destructure_rec_ui_tests/disallowed_array_tuple_pat_syntax-err.rs:17:46
   |
17 | const _: () = { konst::destructure_rec!{ [foo[] aa] = [1, 2, 3, 4] }; };
   |                                              ^^
   |
   = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected pattern, found `,`
  --> tests/misc_tests/destructure_rec_ui_tests/disallowed_array_tuple_pat_syntax-err.rs:19:48
   |
19 | const _: () = { konst::destructure_rec!{ [foo ,, []] = [1, 2, 3, 4] }; };
   |                                                ^
   |
   = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected comma
  --> tests/misc_tests/destructure_rec_ui_tests/disallowed_array_tuple_pat_syntax-err.rs:21:46
   |
21 | const _: () = { konst::destructure_rec!{ [[] []] = [1, 2, 3, 4] }; };
   |                                              ^^
   |
   = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of pattern
  --> tests/misc_tests/destructure_rec_ui_tests/disallowed_array_tuple_pat_syntax-err.rs:26:47
   |
26 | const _: () = { konst::destructure_rec!{ [FOO .. BAR] = [1, 2, 3, 4] }; };
   |                                               ^
   |
   = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of pattern
  --> tests/misc_tests/destructure_rec_ui_tests/disallowed_array_tuple_pat_syntax-err.rs:28:47
   |
28 | const _: () = { konst::destructure_rec!{ [FOO ..] = [1, 2, 3, 4] }; };
   |                                               ^
   |
   = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)
